[project]
name = "qwc-wms-proxy"
version = "v2025.02.09"
description = "QWC WMS proxy service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.0.0",
    "Werkzeug~=3.0.1",
    "requests~=2.31.0",
    "Flask-JWT-Extended~=4.6.0",
    "qwc-services-core~=1.3.34"
]

[dependency-groups]
dev = [
    "flask-cors>=5.0.0",
    "python-dotenv>=1.0.1",
]
