[project]
name = "qwc-wms-proxy"
version = "v2026.01.06"
description = "QWC WMS proxy service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.1.0",
    "Werkzeug~=3.1.0",
    "requests~=2.32.0",
    "Flask-JWT-Extended~=4.7.0",
    "qwc-services-core~=1.5.0"
]

[dependency-groups]
dev = [
    "flask-cors>=5.0.0",
    "python-dotenv>=1.0.1",
]
